--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -5,4 +5,4 @@ spring:
   cloud:
     config:
       failFast: true
-      uri: http://localhost:8888
+      uri: http://ec2-52-37-68-174.us-west-2.compute.amazonaws.com:8888
